--- a/scss/components/_notas.scss
+++ b/scss/components/_notas.scss
@@ -18,6 +18,7 @@
     .nota {
       height: 40vh;
       width: 22vw;
+      max-height: 40vh;
       margin: 0 1.5vw;
       border-bottom-left-radius: 15%;
       border-bottom-right-radius: 15%;
@@ -48,10 +49,12 @@
         pointer-events: none;
       }
       .texto {
-        height: auto;
+        height: inherit;
         padding: 1rem 1rem 0.5rem 1rem;
         background-color: inherit;
         size-adjust: inherit;
+        word-wrap: break-word;
+        overflow-y: auto;
       }
       .btnDiv {
         height: 0px;
